# sundile

./: .gitignore  .gitignore.swp  CMakeLists.txt  CMakeSettings.json  Common.h  Components.h  Doxyfile  Mesh.cpp  Mesh.h  Model.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sundile.h  System.h  Systems.cpp  Systems.h  Utility.h  Window.cpp  Window.h  _TODO.txt  _ideas.txt  cCamera.h  cPhysics.h  cVisible.h  code-design.md  components.txt  cpp.hint  glfw-test.sln  glfw-test.vcxproj  glfw-test.vcxproj.filters  imgui.ini  main.cpp  nanogui.exp  nanogui.lib  sundile.cpp  sundile3.sln  todo.md  (+1 more)
_LEGACY/GuiSystem_LEGACY/: GuiFrontEnd.h  GuiSystem.h
_LEGACY/WindowSystem_LEGACY/: WindowSystem_LEGACY.h
assets/shaders/: yellow.frag
docs/: Events.rst  GUI.rst  Rendering.rst  conf.py  ecs.rst  index.rst  sundile.code-workspace
docs/_build/doctrees/: ECS & Event System.doctree  Events.doctree  GUI.doctree  Rendering.doctree  Serialization.doctree  ecs.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  Events.html  GUI.html  Rendering.html  Serialization.html  ecs.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: ECS & Event System.rst.txt  Events.rst.txt  GUI.rst.txt  Serialization.rst.txt  ecs.rst.txt  index.rst.txt
projects/default/assets/shaders/: passthrough.vert
projects/default/systems/: AllSystems.h  PhysicsSystem.h
shaders/: passthrough.vert
src/: EventWrapper.cpp  GameSystem.cpp  GuiSystem.cpp  Mesh.cpp  Model.cpp  RenderSystem.cpp  Shader.cpp  SimSystem.cpp  WindowSystem.cpp  main.cpp
src/assets/shaders/: light_global.frag  passthrough.frag
src/components/: AllComponents.h  CMakeLists.txt  Camera.h  GuiElement.h  Input.h  Light.h  Mesh.h  Model.h  Physics.h  Renderer.h  Shader.h  Transform.h  Visible.h  Wireframe.h
src/headers/: sundile.h
src/headers/components/: Camera.h  Physics.h  Visible.h
src/headers/sundile/: AllComponents.h  Common.h  Components.h  EventWrapper.h  GameSystem.h  RenderSystem.h  SimSystem.h  Utility.h  WindowSystem.h
src/sundile/: CMakeLists.txt  Common.h  Components.h  EventWrapper.cpp  EventWrapper.h  GuiSystem.cpp  GuiSystem.h  Mesh.cpp  Model.cpp  Model.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h  SimSystem.cpp  SimSystem.h  Utility.h  WindowSystem.cpp  WindowSystem.h  sundile.h
src/sundile/ext/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/sundile/ext/imgui/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_node_editor_internal.h
src/sundile/globals/: Common.h  Data.h  Macros.h  Math.h  Typenames.h  Types.h  Utility.h
src/sundile/headers/: Common.h  Macros.h  Utility.h
src/sundile/systems/: EventSystem.cpp  EventSystem.h  GuiSystem.h  InputSystem.h  SceneSystem.cpp  SceneSystem.h  SimSystem.cpp  SimSystem.h  Systems.h  WindowSystem.cpp  WindowSystem.h
src/sundile/systems/EventSystem/: EventSystem.cpp  EventSystem.h  EventTypes.h  EventUtilities.h
src/sundile/systems/GraphicsSystem/: CameraSystem.h  MeshSystem.h  ModelSystem.h  RenderSystem.h
src/sundile/systems/GuiSystem/: GuiClipboard.h  GuiDebugView.h  GuiFiletree.h  GuiFrontEnd.h  GuiInspectorWindow.h  GuiMainWrapper.h  GuiMeta.h  GuiNodeView.h  GuiRegistry.h  GuiRenderView.h  GuiSystem.h  GuiTrees.h  GuiTypes.h  GuiUtility.h  InspectorWindow.h
src/sundile/systems/InputSystem/: InputSystem.h  InputTypes.h
src/sundile/systems/ProjectSystem/: ProjectSystem.h  ProjectTypes.h
src/sundile/systems/RenderSystem/: CameraSystem.h  InputSystem.h  MeshSystem.h  ModelSystem.h  RenderSystem.h  RenderTypes.h  ShaderSystem.h
src/sundile/systems/SceneSystem/: SceneSystem.h  SceneTypes.h
src/sundile/systems/WindowSystem/: WindowSystem.h  WindowSystemDefinitions.h  WindowTypes.h
src/sundile/systems/_LEGACY/: Systems_LEGACY.h
src/sundile/systems/_LEGACY/EventSystem_LEGACY/: EventTypes_LEGACY.h
src/sundile/systems/_LEGACY/GuiSystem_LEGACY/: GuiMeta.h  GuiTypes.h  GuiUtility.h
src/systems/: AllSystems.h  CMakeLists.txt  Camera.cpp  CameraSystem.h  GuiSystem.h  InputSystem.h  MeshSystem.h  ModelSystem.h  PhysicsSystem.h  RenderSystem.h  ShaderSystem.h
